fix scrollbar issue

--- a/src/sass/_welcome.scss
+++ b/src/sass/_welcome.scss
@@ -7,6 +7,7 @@
 	opacity: 0;
 	visibility: hidden;
 	transition: 0.5s all ease;
+	display: none;
 	z-index: 30;
 
 	&.active {
